// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";

package openpitrix;

// set go package name to pb
option go_package = "pb";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";


enum Currency {
	CNY = 0;
	HKD = 1;
	USD = 2;
}

//************************************* Sku *************************

message AttributeName {
	google.protobuf.StringValue attribute_name_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue display_name = 3;
	google.protobuf.StringValue remark = 4;
}

message CreateAttributeNameRequest {
	google.protobuf.StringValue name = 1;
	google.protobuf.StringValue display_name = 2;
	google.protobuf.StringValue remark = 3;
}

message CreateAttributeNameResponse {
	google.protobuf.StringValue attribute_name_id = 1;
}

message DescribeAttributeNamesRequest {
	google.protobuf.StringValue attribute_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue display_name = 3;
	uint32 offset = 4;
	uint32 limit = 5;
}

message DescribeAttributeNamesResponse {
	repeated AttributeName attribute_names = 1;
}

message AttributeUnit {
	google.protobuf.StringValue attribute_unit_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue display_name = 3;
}

message CreateAttributeUnitRequest {
	google.protobuf.StringValue name = 1;
	google.protobuf.StringValue display_name = 2;
}

message CreateAttributeUnitResponse {
	google.protobuf.StringValue attribute_unit_id = 1;
}

message DescribeAttributeUnitsRequest {
	google.protobuf.StringValue attribute_unit_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue display_name = 3;
	uint32 offset = 4;
	uint32 limit = 5;
}

message DescribeAttributeUnitsResponse {
	repeated AttributeUnit attribute_units = 1;
}

message Attribute {
	google.protobuf.StringValue attribute_id = 1;
	google.protobuf.StringValue attribute_name_id = 2;
	google.protobuf.StringValue attribute_unit_id = 3;
	google.protobuf.UInt32Value min_value = 4;
	google.protobuf.UInt32Value max_value = 5;
	google.protobuf.StringValue str_value = 6;
}

message CreateAttributeRequest {
	google.protobuf.StringValue attribute_name_id = 1;
	google.protobuf.StringValue attribute_unit_id = 2;
    google.protobuf.UInt32Value min_value = 3;
    google.protobuf.UInt32Value max_value = 4;
	google.protobuf.StringValue str_value = 5;
}

message CreateAttributeResponse {
	google.protobuf.StringValue attribute_id = 1;
}

message DescribeAttributesRequest {
	google.protobuf.StringValue attribute_id = 1;
	google.protobuf.StringValue attribute_name_id = 2;
	google.protobuf.StringValue attribute_unit_id = 3;
	uint32 offset = 4;
	uint32 limit = 5;
}

message DescribeAttributesResponse {
	repeated Attribute attributes = 1;
}

//SPU: standard product unit
message Spu {
	google.protobuf.StringValue spu_id = 1;
	google.protobuf.StringValue resource_version_id = 2;
	repeated google.protobuf.StringValue attribute_name_ids = 3;
	repeated google.protobuf.StringValue metering_attribute_name_ids = 4;
}

message CreateSpuRequest {
	google.protobuf.StringValue resource_version_id = 1;
	repeated google.protobuf.StringValue attribute_name_ids = 2;
	repeated google.protobuf.StringValue metering_attribute_name_ids = 3;
}

message CreateSpuResponse {
	google.protobuf.StringValue spu_id = 1;
}

//SKU: stock keeping unit
message Sku {
	google.protobuf.StringValue sku_id = 1;
	google.protobuf.StringValue spu_id = 2;
	repeated google.protobuf.StringValue attribute_ids = 3;
	repeated google.protobuf.StringValue metering_attribute_ids = 4;
}

message CreateSkuRequest {
	google.protobuf.StringValue spu_id = 1;
	repeated google.protobuf.StringValue attribute_ids = 2;
	repeated google.protobuf.StringValue metering_attribute_ids = 3;
}

message CreateSkuResponse {
	google.protobuf.StringValue sku_id = 1;
}

message Price {
    google.protobuf.StringValue price_id = 1;
    google.protobuf.StringValue sku_id = 2;
    google.protobuf.StringValue attribute_id = 3; //metering attribute id
	map<string, double> prices = 4;  //{upto: price}
    Currency currency = 5;
}

message CreatePriceRequest {
	google.protobuf.StringValue sku_id = 1;
	google.protobuf.StringValue attribute_id = 2; //metering attribute id
	map<string, double> prices = 3;
	Currency currency = 4;
}

message CreatePriceResponse {
	google.protobuf.StringValue price_id = 1;
}

service SkuManager {
	rpc CreateAttributeName (CreateAttributeNameRequest) returns (CreateAttributeNameResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "create attribute name"
		};
		option (google.api.http) = {
			post: "/v1/mbing/attribute/name"
			body: "*"
		};
	}

	rpc DescribeAttributeNames (DescribeAttributeNamesRequest) returns (DescribeAttributeNamesResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "describe attribute_names"
		};
		option (google.api.http) = {
			get: "/v1/mbing/attribute/names"
		};
	}

	rpc CreateAttributeUnit (CreateAttributeUnitRequest) returns (CreateAttributeUnitResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "create attribute unit"
        };
		option (google.api.http) = {
            post: "/v1/mbing/attribute/unit"
            body: "*"
        };
	}

	rpc DescribeAttributeUnits (DescribeAttributeUnitsRequest) returns (DescribeAttributeUnitsResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "describe attribute_units"
		};
		option (google.api.http) = {
			get: "/v1/mbing/attribute/units"
		};
	}

	rpc CreateAttribute (CreateAttributeRequest) returns (CreateAttributeResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "create attribute"
        };
		option (google.api.http) = {
            post: "/v1/mbing/attribute"
            body: "*"
        };
	}

	rpc DescribeAttributes (DescribeAttributesRequest) returns (DescribeAttributesResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "describe attributes"
		};
		option (google.api.http) = {
			get: "/v1/mbing/attributes"
		};
	}

	rpc CreateSpu (CreateSpuRequest) returns (CreateSpuResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "create spu"
        };
		option (google.api.http) = {
            post: "/v1/mbing/spu"
            body: "*"
        };
	}

	rpc CreateSku (CreateSkuRequest) returns (CreateSkuResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "create sku of the resource"
        };
		option (google.api.http) = {
            post: "/v1/mbing/sku"
            body: "*"
        };
	}

	rpc CreatePrice (CreatePriceRequest) returns (CreatePriceResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "create price of the sku"
        };
		option (google.api.http) = {
            post: "/v1/mbing/sku/price"
            body: "*"
        };
	}
}


//************************************* Promotion *************************
//CombinationSpu
message CombinationSpu {
	google.protobuf.StringValue combination_spu_id = 1;
	repeated google.protobuf.StringValue  spu_ids = 2;
}

message CreateCombinationSpuRequest {
	repeated google.protobuf.StringValue spu_ids = 1;
}

message CreateCombinationSpuResponse {
	google.protobuf.StringValue combination_spu_id = 1;
}

message CombinationSku {
    google.protobuf.StringValue combination_sku_id = 1;
    google.protobuf.StringValue combination_spu_id = 2;
	repeated CreateSkuRequest create_sku_requests = 3;
}

message CreateCombinationSkuRequest {
	google.protobuf.StringValue combination_spu_id = 1;
	repeated CreateSkuRequest create_sku_requests = 2;
}

message CreateCombinationSkuResponse {
    google.protobuf.StringValue combination_sku_id = 1;
}

message CombinationPrice {
    google.protobuf.StringValue combination_price_id = 1;
    google.protobuf.StringValue combination_sku_id = 2;
    google.protobuf.StringValue spu_id = 3;
    google.protobuf.StringValue attribute_id = 4;
	map<string, double> prices = 5;
	Currency currency = 6;
}

message CreateCombinationPriceRequest {
	google.protobuf.StringValue combination_sku_id = 1;
	google.protobuf.StringValue spu_id = 2;
	google.protobuf.StringValue attribute_id = 3;
	map<string, double> prices = 4;
	Currency currency = 5;
}

message CreateCombinationPriceResponse {
	google.protobuf.StringValue combination_price_id = 1;
}

message ProbationSku {
    google.protobuf.StringValue probation_sku_id = 1;
    google.protobuf.StringValue spu_id = 2;
	repeated google.protobuf.StringValue attribute_ids = 3;
	repeated google.protobuf.StringValue metering_attribute_ids = 4;
    google.protobuf.UInt32Value limit_num = 5;
}

message CreateProbationSkuRequest {
	google.protobuf.StringValue spu_id = 1;
	repeated google.protobuf.StringValue attribute_ids = 2;
	repeated google.protobuf.StringValue metering_attribute_ids = 3;
	google.protobuf.UInt32Value limit_num = 4;
}

message CreateProbationSkuResponse {
	google.protobuf.StringValue probation_sku_id = 1;
}

message Limit {
	enum Types {
		RESOURCE = 0;
		SKU = 1;
		PRICE = 2;
		USER = 3;
		REGOIN = 4;
	}
	Types type = 1;
    google.protobuf.StringValue id = 2; // the id of the TYPE
}

message Discount {
    google.protobuf.StringValue discount_id = 1;
    google.protobuf.StringValue name = 2;
	repeated Limit limits = 3;
    google.protobuf.FloatValue discount_value = 4;
    google.protobuf.FloatValue discount_percent = 5;
    google.protobuf.Timestamp start_time = 6;
    google.protobuf.Timestamp end_time = 7;
    google.protobuf.StringValue mark = 8;
}

message Coupon {
    google.protobuf.StringValue coupon_id = 1;
    google.protobuf.StringValue name = 2;
	repeated Limit limits = 3;
    google.protobuf.FloatValue balance = 4;
    google.protobuf.UInt32Value count = 5;
    google.protobuf.UInt32Value limit_num = 6;
    google.protobuf.Timestamp start_time = 7;
    google.protobuf.Timestamp end_time = 8;
    google.protobuf.StringValue mark = 9;
}

message CouponReceived {
    google.protobuf.StringValue coupon_received_id = 1;
    google.protobuf.StringValue coupon_id = 2;
    google.protobuf.StringValue user_id = 3;
}

service PromotionManager {
	rpc CreateCombinationSpu (CreateCombinationSpuRequest) returns (CreateCombinationSpuResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "create of combination spus"
		};
		option (google.api.http) = {
			post: "/v1/mbing/combination/spus"
			body: "*"
		};
	}

	rpc CreateCombinationSku (CreateCombinationSkuRequest) returns (CreateCombinationSkuResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "create combination sku of combination resources"
		};
		option (google.api.http) = {
			post: "/v1/mbing/combination/sku"
			body: "*"
		};
	}

	rpc CreateCombinationPrice (CreateCombinationPriceRequest) returns (CreateCombinationPriceResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "create combination price of combination sku"
		};
		option (google.api.http) = {
			post: "/v1/mbing/combination/sku/price"
			body: "*"
		};
	}

	rpc CreateProbationSku (CreateProbationSkuRequest) returns (CreateProbationSkuResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "create probation sku of resource"
		};
		option (google.api.http) = {
			post: "/v1/mbing/probation/sku"
			body: "*"
		};
	}

}


//************************** metering ****************************

message MeteringAttributeValue {
	google.protobuf.StringValue attribute_id = 1;
	google.protobuf.DoubleValue value = 2;
	enum UpdateValueTypes {
		INCREMENTAL = 0;
		REPLACE = 1;
	}
	UpdateValueTypes type = 3;
}

message MeteringSku {
	google.protobuf.StringValue sku_id = 1;
	repeated MeteringAttributeValue attribute_values = 2;
	google.protobuf.Timestamp action_time = 3;  // start/close/delete resource time for metering
	google.protobuf.StringValue other_info = 4;
	enum SkuTypes {
		SKU = 0;
		COMBATION = 1;
		PROBATION = 2;
	}
	SkuTypes type = 5;
}

message MeteringRequest {
	google.protobuf.StringValue resource_id = 1; //cluster id
	google.protobuf.StringValue user_id = 2;
	repeated MeteringSku sku_set = 3;
}

message MeteringResponse {
	repeated google.protobuf.StringValue leasing_ids = 1;
}

service MeteringManager {
	rpc StartMetering (MeteringRequest) returns (MeteringResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "start metering about the sku_set"
		};
		option (google.api.http) = {
			post: "/v1/metering/skus"
			body: "*"
		};
	}

//	rpc UpdateMetering (MeteringRequest) returns (MeteringResponse) {
//		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
//			summary: "update metering value about the sku_set"
//		};
//		option (google.api.http) = {
//			put: "/v1/metering/skus"
//			body: "*"
//		};
//	}
//
//	rpc CloseMetering (MeteringRequest) returns (MeteringResponse) {
//		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
//			summary: "pause metering value about the sku_set"
//		};
//		option (google.api.http) = {
//			put: "/v1/metering/skus/pause"
//			body: "*"
//		};
//	}
//
//	rpc StopMetering (MeteringRequest) returns (MeteringResponse) {
//		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
//            summary: "stop metering about the sku_set"
//        };
//		option (google.api.http) = {
//            delete: "/v1/metering/skus"
//            body: "*"
//        };
//	}
}
